# abstral_paper

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  run_experiment.py  run_sop.py
abstral/: __init__.py  benchmarks.py  cli.py  config.py  meta_client.py  models.py  orchestrator.py  pipeline.py  sop_adapter.py  tau_adapter.py  tools.py  tracing.py  tracking.py
abstral/layer1/: analyzer.py  builder.py  runner.py  updater.py
abstral/layer2/: convergence.py
abstral/layer3/: landscape.py  seeder.py  topology.py
abstral/skill/: compactor.py  document.py  versioning.py
configs/: default.yaml
figures/: generate_fig1.py  generate_fig2.py
templates/: seed_skill.md
